// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render 1`] = `
<Checkbox__CheckboxContainer>
  <Checkbox__StyledCheckbox
    checked={false}
    onClick={[MockFunction]}
  >
    <Icon
      checked={false}
      faStyle="fas"
      fixedWidth={false}
      name="check"
    />
    <Checkbox__CheckboxInput />
  </Checkbox__StyledCheckbox>
  <Checkbox__CheckboxLabel
    onClick={[MockFunction]}
  >
    foo
  </Checkbox__CheckboxLabel>
</Checkbox__CheckboxContainer>
`;

exports[`Checkbox should render when [props.checked===true] 1`] = `
<Checkbox__CheckboxContainer>
  <Checkbox__StyledCheckbox
    checked={true}
    onClick={[MockFunction]}
  >
    <Icon
      checked={true}
      faStyle="fas"
      fixedWidth={false}
      name="check"
    />
    <Checkbox__CheckboxInput />
  </Checkbox__StyledCheckbox>
  <Checkbox__CheckboxLabel
    onClick={[MockFunction]}
  >
    foo
  </Checkbox__CheckboxLabel>
</Checkbox__CheckboxContainer>
`;

exports[`Checkbox should render when [props.label===''] 1`] = `
<Checkbox__CheckboxContainer>
  <Checkbox__StyledCheckbox
    checked={false}
    onClick={[MockFunction]}
  >
    <Icon
      checked={false}
      faStyle="fas"
      fixedWidth={false}
      name="check"
    />
    <Checkbox__CheckboxInput />
  </Checkbox__StyledCheckbox>
</Checkbox__CheckboxContainer>
`;
